--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "bootstrap": "^4.5.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.15.2",
     "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
