--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "@swimlane/ngx-charts": "^14.0.0",
     "bootstrap": "^4.5.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
